fix: change name of image for validator

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <div class="wrapper">
         <header class="page-header">
@@ -44,7 +46,7 @@
             <div class="page-main__wrapper">
                 <section class="profile">
                     <div class="profile__wrapper">
-                        <img src="images/it's me.jpg" alt="It's me" width="150">
+                        <img src="images/me.jpg" alt="It's me" width="150">
                         <div class="profile__titles">
                             <h1 class="profile__title">Artem Nazaruk</h1>
                             <h2 class="profile__subtitle">Beginner Frontend Developer</h2>
@@ -52,104 +54,116 @@
                     </div>
                 </section>
                 <section class="about">
-                    <div class="about__container">
-                        <p class="about__title">Contacts</p>
-                        <div class="about__content">
-                            <ul class="about__content-list contacts-list">
-                                <li class="about__content-item">
-                                    St. Petersburg, Russia
-                                </li>
-                                <li class="about__content-item">
-                                    <a href="">darkzell20@gmail.com</a>
-                                </li>
-                                <li class="about__content-item">
-                                    <a href="">+79539373547</a>
-                                </li>
-                                <li class="about__content-item">
-                                    <a>@beetledn</a>
-                                </li>
-                                <li class="about__content-item">
-                                    btldn
-                                </li>
-                            </ul>
+                    <aside class="about__aside-column">
+                        <div class="about__container">
+                            <p class="about__title">Contacts</p>
+                            <div class="about__content">
+                                <ul class="about__content-list contacts-list">
+                                    <li class="about__content-item">
+                                        St. Petersburg, Russia
+                                    </li>
+                                    <li class="about__content-item">
+                                        <a href="">darkzell20@gmail.com</a>
+                                    </li>
+                                    <li class="about__content-item">
+                                        <a href="">+79539373547</a>
+                                    </li>
+                                    <li class="about__content-item">
+                                        <a>@beetledn</a>
+                                    </li>
+                                    <li class="about__content-item">
+                                        btldn
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    
-                    <div class="about__container">
-                        <h3 class="about__title">Tools & skills</h3>
-                        <div class="about__content">
-                           <ul class="about__content-list">
-                                <li class="about__content-item">HTML5, CSS3, JavaScript Basics</li>
-                                <li class="about__content-item">Git, GitHub</li>
-                                <li class="about__content-item">Figma, Adobe Photoshop</li>
-                                <li class="about__content-item">Sony Vegas Pro, Adobe Premier Pro</li>
-                                <li class="about__content-item">MS Excel</li>
-                           </ul>
-                        </div>
-                    </div>
 
-                    <div class="about__container">
-                        <h3 class="about__title">Education</h3>
-                        <div class="about__content">
-                            <h4 class="about__content-subtitle">The Bonch-Bruevich Saint-Petersburg State University of Telecommunications</h4>
-                            <p class="about__content-subsubtitle"> Bachelor of Design of graphic and user interfaces of information systems, 2022-2026</p>
-                            <ul class="about__content-list">
-                                <li class="about__content-item">Design information technologies</li>
-                                <li class="about__content-item">Web technologies</li>
-                                <li class="about__content-item">System analytics</li>
-                                <li class="about__content-item">Cisco Information Networks</li>
-                                <li class="about__content-item">User Experience, Usability</li>
-                            </ul>
-                            <h4 class="about__content-subtitle">HTML Academy</h4>
-                            <p class="about__content-subsubtitle">Basic of HTML and CSS, 2023-2024</p>
-                            <ul class="about__content-list">
-                                <li class="about__content-item">HTML, CSS, SCSS</li>
-                                <li class="about__content-item">Adaptive web-site layout</li>
-                                <li class="about__content-item">BEM methodology</li>
-                           </ul>
+                        <div class="about__container">
+                            <h3 class="about__title">Tools & skills</h3>
+                            <div class="about__content">
+                                <ul class="about__content-list">
+                                    <li class="about__content-item">HTML5, CSS3, JavaScript Basics</li>
+                                    <li class="about__content-item">Git, GitHub</li>
+                                    <li class="about__content-item">Figma, Adobe Photoshop</li>
+                                    <li class="about__content-item">Sony Vegas Pro, Adobe Premier Pro</li>
+                                    <li class="about__content-item">MS Excel</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__container">
-                        <h3 class="about__title">About me</h3>
-                        <div class="about__content">
-                           <p class="about__text">Hello, my name is Artem Nazaruk. I entered the university to major in information interface design because I became interested in web development and wanted to find out what it was. During the course I became interested in front-end development and web design. Currently I work as a card designer for marketplaces, and am also developing in the field of development.</p>
+
+                        <div class="about__container">
+                            <h3 class="about__title">Education</h3>
+                            <div class="about__content">
+                                <h4 class="about__content-subtitle">The Bonch-Bruevich Saint-Petersburg State University
+                                    of Telecommunications</h4>
+                                <p class="about__content-subsubtitle"> Bachelor of Design of graphic and user interfaces
+                                    of information systems, 2022-2026</p>
+                                <ul class="about__content-list">
+                                    <li class="about__content-item">Design information technologies</li>
+                                    <li class="about__content-item">Web technologies</li>
+                                    <li class="about__content-item">System analytics</li>
+                                    <li class="about__content-item">Cisco Information Networks</li>
+                                    <li class="about__content-item">User Experience, Usability</li>
+                                </ul>
+                                <h4 class="about__content-subtitle">HTML Academy</h4>
+                                <p class="about__content-subsubtitle">Basic of HTML and CSS, 2023-2024</p>
+                                <ul class="about__content-list">
+                                    <li class="about__content-item">HTML, CSS, SCSS</li>
+                                    <li class="about__content-item">Adaptive web-site layout</li>
+                                    <li class="about__content-item">BEM methodology</li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__container">
-                        <h3 class="about__title">Projects</h3>
-                        <div class="about__content">
-                            <ul class="about__content-list">
-                                <li class="about__content-item">
-                                    <a href="">
-                                        HTML CV
-                                    </a>
-                                </li>
-                           </ul>
+                    </aside>
+                    <div class="about__main-column">
+                        <div class="about__container">
+                            <h3 class="about__title">About me</h3>
+                            <div class="about__content">
+                                <p class="about__text">Hello, my name is Artem Nazaruk. I entered the university to
+                                    major in information interface design because I became interested in web development
+                                    and wanted to find out what it was. During the course I became interested in
+                                    front-end development and web design. Currently I work as a card designer for
+                                    marketplaces, and am also developing in the field of development.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__container">
-                        <h3 class="about__title">Code example</h3>
-                        <div class="about__content">
-                            <h4 class="about__content-subtitle">Solving a kata from Codewars:</h4>
-                            <p class="about__content-text">Complete the findNextSquare method that finds the next integral perfect square after the one passed as a parameter. Recall that an integral perfect square is an integer n such that sqrt(n) is also an integer.</p>
-                            <pre class="about__content-code">
-                                function findNextSquare(sq) {
-                                    if (sq % Math.sqrt(sq) == 0) {   
-                                        return (Math.sqrt(sq) + 1) * (Math.sqrt(sq) + 1)  
-                                    } else {    
-                                        return -1;  
+                        <div class="about__container">
+                            <h3 class="about__title">Projects</h3>
+                            <div class="about__content">
+                                <ul class="about__content-list">
+                                    <li class="about__content-item">
+                                        <a href="">
+                                            HTML CV
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="about__container">
+                            <h3 class="about__title">Code example</h3>
+                            <div class="about__content">
+                                <h4 class="about__content-subtitle">Solving a kata from Codewars:</h4>
+                                <p class="about__content-text">Complete the findNextSquare method that finds the next
+                                    integral perfect square after the one passed as a parameter. Recall that an integral
+                                    perfect square is an integer n such that sqrt(n) is also an integer.</p>
+                                <pre class="about__content-code">
+                                    function findNextSquare(sq) {
+                                        if (sq % Math.sqrt(sq) == 0) {   
+                                            return (Math.sqrt(sq) + 1) * (Math.sqrt(sq) + 1)  
+                                        } else {    
+                                            return -1;  
+                                        }
                                     }
-                                }
-                            </pre>
+                                </pre>
+                            </div>
                         </div>
-                    </div>
-                    <div class="about__container">
-                        <h3 class="about__title">Languages</h3>
-                        <div class="about__content">
-                            <ul class="about__content-list">
-                                <li class="about__content-item">HTML, CSS, SCSS</li>
-                                <li class="about__content-item">Adaptive web-site layout</li>
-                           </ul>
+                        <div class="about__container">
+                            <h3 class="about__title">Languages</h3>
+                            <div class="about__content">
+                                <ul class="about__content-list">
+                                    <li class="about__content-item">HTML, CSS, SCSS</li>
+                                    <li class="about__content-item">Adaptive web-site layout</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -174,4 +188,5 @@
         </footer>
     </div>
 </body>
+
 </html>
