--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
                 <nav class="page-header__navigation">
                     <ul class="page-header__navigation-list">
                         <li class="page-header__navigation-item">
-                            <a href="#">home</a>
+                            <a href="#my_profile">home</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">about</a>
+                            <a href="#about">about</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">contacts</a>
+                            <a href="#contacts">contacts</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">tools & skills</a>
+                            <a href="#skills">tools & skills</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">projects</a>
+                            <a href="#projects">projects</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">code example</a>
+                            <a href="#code">code example</a>
                         </li>
                         <li class="page-header__navigation-item">
-                            <a href="#">languages</a>
+                            <a href="#languages">languages</a>
                         </li>
                     </ul>
                 </nav>
@@ -45,7 +45,7 @@
         </header>
         <main class="page-main">
             <div class="page-main__wrapper">
-                <section class="profile">
+                <section id="my_profile" class="profile">
                     <img class="profile__image" src="images/me.jpg" alt="It's me" width="150">
                     <div class="profile__titles">
                         <h1 class="profile__title">Artem Nazaruk</h1>
@@ -54,7 +54,7 @@
                 </section>
                 <section class="about">
                     <aside class="about__aside-column">
-                        <div class="about__container">
+                        <div id="contacts" class="about__container">
                             <h3 class="about__title">Contacts</h3>
                             <div class="about__content">
                                 <ul class="about__content-list contacts-list">
@@ -74,7 +74,7 @@
                                                 <path d="M1.5 2.83334L9 7.83334L16.5 2.83334" stroke="black" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
                                             </svg> 
                                         </div>
-                                        <a href="">darkzell20@gmail.com</a>
+                                        <a href="mailto:darkzell20@gmail.com">darkzell20@gmail.com</a>
                                     </li>
                                     <li class="contacts-item">
                                         <div class="contacts-icon__wrapper">
@@ -82,7 +82,7 @@
                                                 <path d="M3.16667 1.33334H6.5L8.16667 5.50001L6.08333 6.75001C6.9758 8.55962 8.44039 10.0242 10.25 10.9167L11.5 8.83334L15.6667 10.5V13.8333C15.6667 14.2754 15.4911 14.6993 15.1785 15.0119C14.866 15.3244 14.442 15.5 14 15.5C10.7494 15.3025 7.68346 13.9221 5.38069 11.6193C3.07792 9.31655 1.69754 6.25062 1.5 3.00001C1.5 2.55798 1.67559 2.13406 1.98816 1.8215C2.30072 1.50894 2.72464 1.33334 3.16667 1.33334" stroke="black" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
                                             </svg>
                                         </div>
-                                        <a href="">+79539373547</a>
+                                        <a href="tel:+79539373547">+79539373547</a>
                                     </li>
                                     <li class="contacts-item">
                                         <div class="contacts-icon__wrapper">
@@ -90,12 +90,12 @@
                                                 <path d="M14.246 0.0245083C13.9937 0.107149 0.336222 5.80019 0.248223 5.8614C0.0604904 5.9869 -0.0421756 6.27767 0.0164907 6.50723C0.0546238 6.6572 0.180756 6.83167 0.298089 6.89594C0.347955 6.92349 1.19568 7.26936 2.18714 7.6642C3.1786 8.05904 3.99407 8.38654 3.99993 8.39266C4.0058 8.39878 4.24046 9.31702 4.52206 10.4311C4.80366 11.5453 5.05006 12.4849 5.06766 12.5247C5.21139 12.8185 5.58099 12.9502 5.85672 12.8063C5.89779 12.7849 6.39059 12.4206 6.95085 11.9983L7.97458 11.2331L8.24151 11.4259C9.17723 12.0993 11.7322 13.8959 11.8143 13.9418C11.8788 13.9786 11.9786 13.9969 12.0959 14C12.2484 14 12.2953 13.9878 12.4039 13.9082C12.4801 13.8531 12.5564 13.7613 12.5945 13.6786C12.6825 13.495 15.0204 0.713182 14.9999 0.541779C14.9529 0.174486 14.5775 -0.0826188 14.246 0.0245083ZM11.606 2.58025C11.5004 2.68738 10.1746 4.01576 8.65804 5.53696C5.44899 8.74771 5.46072 8.73853 5.43139 8.8732C5.41966 8.92524 5.40206 8.95891 5.39032 8.9436C5.37859 8.93136 5.29646 8.63752 5.21139 8.29472C5.04419 7.63665 4.97673 7.48361 4.80659 7.39179C4.75966 7.3673 4.18473 7.13162 3.52474 6.8684C2.86474 6.60517 2.30741 6.37867 2.28394 6.36643C2.25461 6.34807 3.09647 5.9869 4.86233 5.25231C6.30552 4.6524 8.44097 3.76477 9.61137 3.27505C10.7818 2.78839 11.7498 2.38743 11.7674 2.38743C11.782 2.38436 11.7116 2.47313 11.606 2.58025ZM13.4481 2.58944C13.4335 2.67208 13.0287 4.88808 12.5476 7.52034C12.0666 10.1495 11.6676 12.3105 11.6588 12.3166C11.6383 12.3411 6.94205 9.01706 6.95085 8.98951C6.95965 8.95891 13.4335 2.44864 13.4569 2.44864C13.4657 2.44558 13.4628 2.50986 13.4481 2.58944ZM6.27912 10.0363C6.62525 10.2812 6.90978 10.4862 6.90978 10.4954C6.90978 10.523 5.97112 11.2055 5.95645 11.1902C5.94765 11.181 5.84792 10.8107 5.73646 10.3669C5.62499 9.92611 5.52526 9.53433 5.51352 9.50066C5.49886 9.44557 5.50472 9.44863 5.57219 9.51597C5.61326 9.55882 5.93005 9.79144 6.27912 10.0363Z" fill="black"/>
                                             </svg>
                                         </div>
-                                        <a>@beetledn</a>
+                                        <a href="https://t.me/beetledn" >@beetledn</a>
                                     </li>
                                     <li class="contacts-item">
                                         <div class="contacts-icon__wrapper">
-                                            <svg class="contacts-icon" width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M3.16667 1.33334H6.5L8.16667 5.50001L6.08333 6.75001C6.9758 8.55962 8.44039 10.0242 10.25 10.9167L11.5 8.83334L15.6667 10.5V13.8333C15.6667 14.2754 15.4911 14.6993 15.1785 15.0119C14.866 15.3244 14.442 15.5 14 15.5C10.7494 15.3025 7.68346 13.9221 5.38069 11.6193C3.07792 9.31655 1.69754 6.25062 1.5 3.00001C1.5 2.55798 1.67559 2.13406 1.98816 1.8215C2.30072 1.50894 2.72464 1.33334 3.16667 1.33334" stroke="black" stroke-width="1.25" stroke-linecap="round" stroke-linejoin="round"/>
+                                            <svg class="contacts-icon" width="17" height="13" viewBox="0 0 17 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M5.94017 1.07611C5.00971 1.27345 4.29939 1.49334 3.42176 1.85136C3.27793 1.91056 3.25445 1.93593 3.05192 2.24321C2.0833 3.71476 1.45517 5.2286 1.17045 6.78191C1.02369 7.59098 0.997275 7.94336 1.00021 8.94131C1.00315 9.45156 1.01489 9.94208 1.02956 10.0267L1.05304 10.1789L1.43462 10.4298C2.38856 11.0528 3.38067 11.532 4.41973 11.8731C4.634 11.9436 4.82479 11.9944 4.8424 11.9887C4.91578 11.9605 5.64665 10.8414 5.64665 10.7568C5.64665 10.7455 5.57033 10.7089 5.47934 10.675C5.24746 10.5876 4.49605 10.2296 4.44615 10.1817C4.39625 10.1338 4.40799 10.1169 4.56649 10.0069L4.69271 9.91953L4.98623 10.0407C6.53602 10.675 8.30595 10.8808 9.94673 10.6158C10.7011 10.4946 11.3879 10.2945 12.1951 9.96181C12.2978 9.91953 12.3008 9.91953 12.4299 10.0182C12.5004 10.0718 12.5591 10.131 12.5591 10.1479C12.5591 10.1873 11.9456 10.4974 11.6198 10.6215C11.4907 10.6722 11.3732 10.723 11.3586 10.7342C11.2999 10.785 12.0601 11.9972 12.1511 12C12.1716 12 12.3419 11.9493 12.5327 11.8844C13.6157 11.5264 14.5932 11.0556 15.553 10.4298L15.9346 10.1789L15.9551 10.0267C15.9639 9.94208 15.9815 9.57842 15.9933 9.22322C16.0755 6.7368 15.4062 4.47027 13.9327 2.24039L13.7155 1.91338L13.3134 1.75269C12.5708 1.45669 11.6022 1.17478 10.8889 1.04792L10.6248 1L10.5749 1.06766C10.5455 1.10149 10.4516 1.27627 10.3665 1.45387L10.2109 1.77242L10.0641 1.75551C9.98489 1.74705 9.79117 1.7245 9.63854 1.70477C9.27457 1.65966 7.74532 1.65966 7.36375 1.70477C7.20231 1.72168 7.00565 1.74423 6.92347 1.75551L6.77671 1.76961L6.58592 1.39467C6.36284 0.957714 6.401 0.977448 5.94017 1.07611ZM6.53895 5.72476C6.92347 5.90518 7.20231 6.25756 7.30798 6.6917C7.36668 6.9285 7.34907 7.32035 7.26689 7.54869C6.92934 8.51845 5.82276 8.81164 5.10363 8.12378C4.634 7.67273 4.51953 6.94259 4.82479 6.34213C4.9921 6.01794 5.26507 5.78114 5.61436 5.66556C5.7758 5.60917 5.84918 5.60072 6.06638 5.60917C6.28946 5.62045 6.35403 5.63455 6.53895 5.72476ZM11.5347 5.72758C12.0366 5.96438 12.3389 6.45771 12.3389 7.03844C12.3389 7.4613 12.201 7.81087 11.9221 8.09559C11.159 8.88211 9.92619 8.47053 9.67963 7.34854C9.55048 6.75935 9.81758 6.10251 10.3136 5.79805C10.5543 5.64864 10.7569 5.5979 11.0562 5.61199C11.2823 5.62045 11.3439 5.63455 11.5347 5.72758Z" stroke="black"/>
                                             </svg>
                                         </div>
                                         btldn
@@ -104,7 +104,7 @@
                             </div>
                         </div>
 
-                        <div class="about__container">
+                        <div id="skills" class="about__container">
                             <h3 class="about__title">Tools & skills</h3>
                             <div class="about__content">
                                 <ul class="about__content-list">
@@ -117,7 +117,7 @@
                             </div>
                         </div>
 
-                        <div class="about__container">
+                        <div id="education" class="about__container">
                             <h3 class="about__title">Education</h3>
                             <div class="about__content">
                                 <h4 class="about__content-subtitle">The Bonch-Bruevich Saint-Petersburg State University
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                     </aside>
-                    <div class="about__main-column">
+                    <div id="about" class="about__main-column">
                         <div class="about__container">
                             <h3 class="about__title">About me</h3>
                             <div class="about__content">
@@ -152,7 +152,7 @@
                                     marketplaces, and am also developing in the field of development.</p>
                             </div>
                         </div>
-                        <div class="about__container">
+                        <div id="projects" class="about__container">
                             <h3 class="about__title">Projects</h3>
                             <div class="about__content">
                                 <ul class="about__content-list">
@@ -164,7 +164,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="about__container">
+                        <div id="code" class="about__container">
                             <h3 class="about__title">Code example</h3>
                             <div class="about__content">
                                 <h4 class="about__content-subtitle">Solving a kata from Codewars:</h4>
@@ -183,7 +183,7 @@
                                 </pre>
                             </div>
                         </div>
-                        <div class="about__container">
+                        <div id="languages" class="about__container">
                             <h3 class="about__title">Languages</h3>
                             <div class="about__content">
                                 <ul class="about__content-list">
@@ -200,7 +200,7 @@
             <div class="page-footer__wrapper">
                 <ul class="page-footer__list">
                     <li class="page-footer__item">
-                        <a href="#">
+                        <a href="https://rs.school/courses/javascript-preschool-ru">
                             <span class="visually-hidden">rs-school</span>
                             <svg class="page-footer__rs-icon" width="72" height="29" viewBox="0 0 72 29" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M37.1722 10.3359L40.5977 10.1145C40.6758 10.6746 40.8191 11.0913 41.0535 11.3909C41.4313 11.8598 41.9522 12.0942 42.6425 12.0942C43.1505 12.0942 43.5543 11.977 43.8278 11.7295C44.0883 11.5342 44.2446 11.2216 44.2446 10.896C44.2446 10.5834 44.1013 10.2838 43.8538 10.0884C43.5933 9.854 42.9812 9.61956 42.0174 9.41117C40.4414 9.0595 39.3083 8.59062 38.644 7.99148C37.9797 7.43143 37.602 6.61088 37.6281 5.73823C37.6281 5.1391 37.8104 4.53996 38.1491 4.04503C38.5398 3.48497 39.0738 3.04213 39.712 2.79467C40.4023 2.4951 41.3661 2.33881 42.5774 2.33881C44.0622 2.33881 45.1954 2.61232 45.9768 3.17238C46.7583 3.71941 47.2272 4.60509 47.3705 5.81638L43.9841 6.01174C43.8929 5.49076 43.7106 5.11305 43.411 4.86558C43.1114 4.61811 42.7207 4.50089 42.2127 4.50089C41.796 4.50089 41.4834 4.59206 41.275 4.76138C41.0796 4.91768 40.9494 5.15212 40.9624 5.41261C40.9624 5.60798 41.0666 5.79033 41.2229 5.90755C41.3922 6.06384 41.7959 6.20711 42.4342 6.33736C44.0101 6.676 45.1302 7.01464 45.8206 7.3663C46.5109 7.71797 47.0058 8.14778 47.3054 8.65574C47.6179 9.17672 47.7742 9.77585 47.7612 10.388C47.7612 11.1174 47.5528 11.8468 47.136 12.4589C46.7062 13.0971 46.1071 13.5921 45.4038 13.8916C44.6614 14.2172 43.7236 14.3866 42.6035 14.3866C40.6237 14.3866 39.2562 14.0088 38.4877 13.2404C37.7192 12.4719 37.2634 11.5081 37.1722 10.3359ZM0.82055 14.1912V2.5472H6.82489C7.93198 2.5472 8.79161 2.63837 9.37771 2.83374C9.9508 3.01609 10.4588 3.3938 10.7974 3.90176C11.1751 4.46182 11.3575 5.11305 11.3444 5.79033C11.3835 6.93649 10.7974 8.03056 9.7945 8.60364C9.40376 8.82506 8.97395 8.98135 8.53111 9.0595C8.85673 9.15067 9.18234 9.30697 9.46889 9.48931C9.6903 9.67166 9.87265 9.88005 10.042 10.1015C10.2373 10.3229 10.4067 10.5704 10.5499 10.8308L12.2952 14.2042H8.2055L6.27786 10.6225C6.03039 10.1666 5.822 9.86703 5.62663 9.72376C5.36614 9.54141 5.05355 9.45024 4.74096 9.45024H4.42836V14.1782H0.82055V14.1912ZM4.42836 7.26211H5.95224C6.27786 7.23606 6.59045 7.18396 6.90304 7.10581C7.13748 7.06674 7.34588 6.93649 7.48915 6.74112C7.84081 6.27224 7.78871 5.60798 7.3589 5.20422C7.12446 5.00885 6.6686 4.90465 6.01737 4.90465H4.42836V7.26211ZM0 24.168L3.42547 23.9466C3.50362 24.5067 3.64689 24.9235 3.88133 25.223C4.24602 25.6919 4.78003 25.9394 5.47033 25.9394C5.97829 25.9394 6.38206 25.8222 6.65557 25.5747C6.91606 25.3663 7.07236 25.0667 7.07236 24.7411C7.07236 24.4285 6.92909 24.129 6.68162 23.9336C6.42113 23.6992 5.80897 23.4647 4.83213 23.2563C3.25615 22.9047 2.12301 22.4358 1.45876 21.8366C0.794501 21.2766 0.416787 20.456 0.442837 19.5834C0.442837 18.9842 0.625181 18.3851 0.963821 17.8902C1.35456 17.3301 1.88857 16.8873 2.52677 16.6398C3.21708 16.3403 4.1809 16.184 5.39219 16.184C6.87699 16.184 8.01013 16.4575 8.79161 17.0175C9.57308 17.5776 10.0289 18.4502 10.1722 19.6615L6.78582 19.8569C6.69465 19.3359 6.5123 18.9582 6.21274 18.7107C5.92619 18.4633 5.52243 18.346 5.01447 18.3591C4.59768 18.3591 4.28509 18.4502 4.0767 18.6326C3.86831 18.7889 3.75109 19.0233 3.76411 19.2838C3.76411 19.4792 3.86831 19.6615 4.0246 19.7787C4.19392 19.935 4.59768 20.0783 5.23589 20.2086C6.81187 20.5472 7.93198 20.8858 8.62229 21.2375C9.31259 21.5892 9.80753 22.019 10.1071 22.5269C10.4197 23.0479 10.576 23.6471 10.576 24.2462C10.576 24.9756 10.3546 25.6919 9.9508 26.3041C9.52098 26.9423 8.92185 27.4372 8.21852 27.7368C7.47612 28.0624 6.53835 28.2317 5.41823 28.2317C3.43849 28.2317 2.07091 27.854 1.30246 27.0856C0.534009 26.3041 0.104197 25.3403 0 24.168Z" fill="black"/>
@@ -215,7 +215,7 @@
                     </li>
                     <li class="page-footer__item">©2024</li>
                     <li class="page-footer__item">
-                        <a href="#">
+                        <a href="https://github.com/btldn">
                             <span class="visually-hidden">my github</span>
                             <svg class="page-footer__git-icon" width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M14.249 0C6.36968 0 0 6.41664 0 14.3549C0 20.7004 4.08127 26.0717 9.74308 27.9728C10.451 28.1157 10.7102 27.6639 10.7102 27.2838C10.7102 26.9511 10.6869 25.8104 10.6869 24.6218C6.72318 25.4776 5.89777 22.9106 5.89777 22.9106C5.26077 21.247 4.31694 20.8194 4.31694 20.8194C3.01961 19.94 4.41144 19.94 4.41144 19.94C5.85052 20.0351 6.60564 21.4135 6.60564 21.4135C7.87934 23.5998 9.93179 22.9821 10.7575 22.6017C10.8753 21.6748 11.253 21.0332 11.6541 20.6767C8.49272 20.344 5.16656 19.1082 5.16656 13.5942C5.16656 12.0257 5.73239 10.7423 6.62897 9.74425C6.48752 9.38784 5.99198 7.91405 6.77072 5.94152C6.77072 5.94152 7.97384 5.56119 10.6866 7.41501C11.8481 7.10079 13.0458 6.94094 14.249 6.9396C15.4521 6.9396 16.6786 7.10614 17.8111 7.41501C20.5242 5.56119 21.7273 5.94152 21.7273 5.94152C22.5061 7.91405 22.0102 9.38784 21.8688 9.74425C22.789 10.7423 23.3315 12.0257 23.3315 13.5942C23.3315 19.1082 20.0053 20.32 16.8203 20.6767C17.3395 21.1282 17.7875 21.9837 17.7875 23.3385C17.7875 25.2635 17.7642 26.8084 17.7642 27.2836C17.7642 27.6639 18.0238 28.1157 18.7313 27.9731C24.3931 26.0714 28.4744 20.7004 28.4744 14.3549C28.4978 6.41664 22.1047 0 14.249 0Z" fill="#24292F"/>
