fix: some fixes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                                     fill="black" />
                                             </svg>
                                         </div>
-                                        <a href="https://t.me/beetledn" bl>@beetledn</a>
+                                        <a href="https://t.me/beetledn">@beetledn</a>
                                     </li>
                                     <li class="contacts-item">
                                         <div class="contacts-icon__wrapper">
